css/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  align-items: center;
}

header {
  position: fixed;
  z-index: 100;
  width: 100%;
  background-color: black;
  color: white;
}

main {
  flex-grow: 1;
  margin: 72.55px 0 1rem 0;
}

footer {
  font-size: small;
  text-align: center;
}

p {
  margin: 7.5px 0;
}

label {
  font-weight: bold;
}

.errorMsg {
  margin: 5px 30px 0 30px;
  color: red;
}

.flexrow {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.title {
  margin-bottom: 0;
}

/* Only applicable to header HTML */

h1 {
  font-size: x-large;
  text-align: center;
  margin: 15px 0 7.5px 0;
}

nav {
  display: flex;
  justify-content: center;
  gap: 15px;
  margin: 7.5px 0;
}

a {
  text-decoration: none;
  color: white;
  font-size: small;
}

a:hover {
  text-decoration: underline;
}

/* Only applicable to index/retired HTML */

.filters {
  position: fixed;
  z-index: 100;
  width: 100%;
  margin: 0;
  padding: 7.5px 0 2.5px 30px;
  background-color: white;
  font-size: smaller;
}

.filters + .dbError {
  margin-top: 30px;
}

.ridersContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.riderContainer {
  width: 300px;
  margin: 15px;
  border: 1px solid black;
  border-radius: 15px;
  padding: 25px;
  display: flex;
  flex-direction: column;
}

h3 {
  margin-bottom: 7.5px;
  font-size: larger;
  text-align: center;
}

img {
  margin: 7.5px auto;
}

.riderButtons {
  margin-top: 15px;
  display: flex;
  justify-content: space-between;
}

.riderButton {
  font-size: small;
}

.noRidersMsg {
margin-top: 15px;
}

/* Only applicable to addRider/editRider HTML: */

.riderFormContainer {
  width: 330px;
  margin: 0 auto;
}

h2 {
  margin: 15px 0;
  font-size: large;
}

.riderStats {
  margin-bottom: 7.5px;
  border: 1px solid black;
  border-radius: 15px;
  padding: 17.5px 25px;
  display: flex;
  flex-direction: column;
}

.statRow {
  margin: 7.5px 0;
}

.statRow.nameRow {
  text-align: center;
}

.statRow.imgRow {
  margin: 7.5px auto;
}

input[type='text'] {
  width: 192px;
}

.imgInput {
  width: 112px;
  height: 174px;
  resize: none;
}

input[type='number'] {
  width: 45px;
}

.riderFormSubmit {
  text-align: center;
}

.validationErrorMsg {
  color: red;
}

.hidden {
  display: none;
}

